Closed
Bug 338770
Opened 19 years ago
Closed 19 years ago
text overwrites table in moz-column when height is set
Categories
(Core :: Layout, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: jharrop, Assigned: roc)
References
Details
(Keywords: verified1.8.0.7, verified1.8.1)
Attachments
(3 files, 1 obsolete file)
|
2.53 KB,
text/html
|
Details | |
|
5.80 KB,
text/html
|
Details | |
|
3.37 KB,
patch
|
bernd_mozilla
:
review+
bzbarsky
:
superreview+
dveditz
:
approval1.8.0.7+
mtschrep
:
approval1.8.1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-GB; rv:1.8.0.3) Gecko/20060426 Firefox/1.5.0.3
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-GB; rv:1.8.0.3) Gecko/20060426 Firefox/1.5.0.3
In Firefox 1.5.0.3 handling of -moz-column-count, the paragraphs following a table may write over the top of the table if "height" is set on the surrounding div.
See the attached test case (derived from Wikipedia's page on Poland).
If the height property is removed, or table rows deleted, the page displays as expected.
Reproducible: Always
Steps to Reproduce:
Open the attached test case.
It reproduces for me irrespective of the size of the browser window.
Actual Results:
Paragraphs write over the top of the table.
Expected Results:
Layed out the table, then the P tags after it, flowing into next column.
| Reporter | ||
Comment 1•19 years ago
|
||
| Reporter | ||
Comment 2•19 years ago
|
||
in this example, the second paragraph in column 2 overwrites the first paragraph. i'm presuming this has the same underlying cause, even though the problem shows up at the top of column 2 this time (compare column 1 in the first test case).
| Assignee | ||
Comment 3•19 years ago
|
||
Assignee: nobody → roc
Status: UNCONFIRMED → ASSIGNED
Attachment #224011 -
Flags: review?(bernd_mozilla)
| Assignee | ||
Comment 4•19 years ago
|
||
Get rid of the conditional exit in SplitRowGroup, it won't be taken now
Attachment #224011 -
Attachment is obsolete: true
Attachment #224013 -
Flags: review?(bernd_mozilla)
Attachment #224011 -
Flags: review?(bernd_mozilla)
NS_ASSERTION(aPresContext->IsPaginated(), "SplitRowGroup currently supports only paged media");
- if (!aPresContext->IsPaginated())
- return NS_ERROR_NOT_IMPLEMENTED;
+
Robert didn't you ask me just to keep this in code? Why should we assert and not exit?
I put this line to get rid off all invalid callers caused by mangleme and its siblings. So before this happens, we should ask bclary to run his tests on this patch. (The predicted outcome will be a couple of new crashes due to the OrderRowGroup blues).
Btw, the elimination of OrderRowGroup is currently P1 for me.
| Assignee | ||
Comment 6•19 years ago
|
||
There is only one caller to SplitRowGroup and the other part of my patch ensures that that caller never calls it with !IsPaginated(). Right?
Attachment #224013 -
Flags: review?(bernd_mozilla) → review+
| Assignee | ||
Updated•19 years ago
|
Attachment #224013 -
Flags: superreview?(bzbarsky)
Comment 7•19 years ago
|
||
Comment on attachment 224013 [details] [diff] [review]
better patch
sr=bzbarsky, but add:
NS_PRECONDITION(aPresContext->IsPaginated(), "Don't know how to split across columns");
at the beginning of SplitRowGroup?
Attachment #224013 -
Flags: superreview?(bzbarsky) → superreview+
| Assignee | ||
Comment 8•19 years ago
|
||
Alright, I moved the assertion up and made it a precondition :-)
| Assignee | ||
Comment 9•19 years ago
|
||
checked in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 10•19 years ago
|
||
Comment on attachment 224013 [details] [diff] [review]
better patch
I'd like to have this in FF2 since it's a very simple fix to a nasty columns bug.
Attachment #224013 -
Flags: approval-branch-1.8.1?(bernd_mozilla)
| Assignee | ||
Comment 11•19 years ago
|
||
Apparently this fixed bug 331446 too, which is a potential security issue, so that's another reason to take this on branch.
Updated•19 years ago
|
Attachment #224013 -
Flags: approval-branch-1.8.1?(bernd_mozilla) → approval1.8.1?
Updated•19 years ago
|
Attachment #224013 -
Flags: approval1.8.1? → approval1.8.1+
| Assignee | ||
Comment 12•19 years ago
|
||
Comment on attachment 224013 [details] [diff] [review]
better patch
This should go into 1.8.0 because it fixed an important crash in bug 331446.
Attachment #224013 -
Flags: approval1.8.0.6?
Updated•19 years ago
|
Flags: blocking1.8.0.6?
Updated•19 years ago
|
Flags: blocking1.8.0.7? → blocking1.8.0.7+
Comment 14•19 years ago
|
||
Comment on attachment 224013 [details] [diff] [review]
better patch
approved for 1.8.0 branch, a=dveditz for drivers
Attachment #224013 -
Flags: approval1.8.0.7? → approval1.8.0.7+
Comment 16•19 years ago
|
||
https://bugzilla.mozilla.org/attachment.cgi?id=222961&action=view should appear without overlapping columns
Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.0.7pre) Gecko/20060821 Firefox/1.5.0.7pre
verified 1.8.0.7
Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.1b2) Gecko/2006082203 BonEcho/2.0b2
verified 1.8.1b2
Status: RESOLVED → VERIFIED
Comment 17•19 years ago
|
||
we learned from another bug (bug 362275) that the patch will not protect against splitting in print mode :-(
You need to log in
before you can comment on or make changes to this bug.
Description
•