Bug 338770. Don't even start trying to split a rowgroup in columns mode. r=bernd,sr=bzbarsky